After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768217 - gl: Raw uploader is broken
gl: Raw uploader is broken
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-29 21:24 UTC by Nicolas Dufresne (ndufresne)
Modified: 2016-06-30 04:08 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicolas Dufresne (ndufresne) 2016-06-29 21:24:31 UTC
Running the following results (on Intel at least) with a pink window and some GL ERRORS (errors goes away if you more to GST_GL_API=opengl). None of this happen if you remove the tee (which moves to GL uploader).

gst-launch-1.0 videotestsrc ! tee ! video/x-raw,format=YUY2 ! glimagesink
Comment 1 Matthew Waters (ystreet00) 2016-06-30 04:08:32 UTC
commit e0ecd774ddf8930ccfa8102b640ee8d33bf0da4c
Author: Matthew Waters <matthew@centricular.com>
Date:   Thu Jun 30 14:04:36 2016 +1000

    glupload: fix raw data uploader with addition of GstVideoGLTextureType
    
    Fixes regression from 989200820d43c78fb179d7984827800d83787390
    
    https://bugzilla.gnome.org/show_bug.cgi?id=768217