glupload: fix raw data uploader with addition of GstVideoGLTextureType

Fixes regression from 989200820d43c78fb179d7984827800d83787390

https://bugzilla.gnome.org/show_bug.cgi?id=768217